{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 264,
  "lineage": "48f6ae80-6eec-fe75-1f1d-78e75547f701",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:825671066733:instance/i-0c3728af0a12b962e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3728af0a12b962e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jensenr",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b5072c7c0dfd904e",
            "private_dns": "ip-10-0-1-161.eu-central-1.compute.internal",
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-18-184-41-38.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.41.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0a12580edfbfd7faf",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095455946477e33a4",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "student-0",
              "Owner": "student"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "student-0",
              "Owner": "student"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b1daa8e806342a5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:825671066733:instance/i-03980b916d97bd4df",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03980b916d97bd4df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jensenr",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd27710371b0cc64",
            "private_dns": "ip-10-0-1-232.eu-central-1.compute.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-3-127-217-124.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.217.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0692f212a589ddfa9",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095455946477e33a4",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "student-1",
              "Owner": "student"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "student-1",
              "Owner": "student"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b1daa8e806342a5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:825671066733:instance/i-059db7aaab5519afd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-059db7aaab5519afd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jensenr",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d4cfe585fcbeef4",
            "private_dns": "ip-10-0-1-35.eu-central-1.compute.internal",
            "private_ip": "10.0.1.35",
            "public_dns": "ec2-3-71-110-204.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.110.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0e66667d1ea2557b5",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095455946477e33a4",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "student-2",
              "Owner": "student"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "student-2",
              "Owner": "student"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b1daa8e806342a5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:internet-gateway/igw-03a73cf82718909e9",
            "id": "igw-03a73cf82718909e9",
            "owner_id": "825671066733",
            "tags": {
              "Name": "student-igw",
              "Owner": "student"
            },
            "tags_all": {
              "Name": "student-igw",
              "Owner": "student"
            },
            "vpc_id": "vpc-0c84778e31043c41d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:route-table/rtb-0623e54406e9fda00",
            "id": "rtb-0623e54406e9fda00",
            "owner_id": "825671066733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a73cf82718909e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "student-rt",
              "Owner": "student"
            },
            "tags_all": {
              "Name": "student-rt",
              "Owner": "student"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c84778e31043c41d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7138ddd6f40069",
            "route_table_id": "rtb-0623e54406e9fda00",
            "subnet_id": "subnet-095455946477e33a4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:security-group/sg-01b1daa8e806342a5",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b1daa8e806342a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "188.179.193.131/32"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "student-sg",
            "name_prefix": "",
            "owner_id": "825671066733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "student-sg",
              "Owner": "student"
            },
            "tags_all": {
              "Name": "student-sg",
              "Owner": "student"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c84778e31043c41d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:subnet/subnet-095455946477e33a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095455946477e33a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825671066733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "student-subnet",
              "Owner": "student"
            },
            "tags_all": {
              "Name": "student-subnet",
              "Owner": "student"
            },
            "vpc_id": "vpc-0c84778e31043c41d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:825671066733:vpc/vpc-0c84778e31043c41d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a1031aa9c1dc123",
            "default_route_table_id": "rtb-06d8ba3ca54e6fb30",
            "default_security_group_id": "sg-08f9a33fba66a000c",
            "dhcp_options_id": "dopt-200d2f48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c84778e31043c41d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d8ba3ca54e6fb30",
            "owner_id": "825671066733",
            "tags": {
              "Name": "student-vpc",
              "Owner": "student"
            },
            "tags_all": {
              "Name": "student-vpc",
              "Owner": "student"
            }
          }
        }
      ]
    }
  ]
}